# GitHubReadMeRender.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
GitHubReadMeRender/: __init__.py  __main__.py
tests/: tests.py
