[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "GitHubReadMeRender"
readme = "ReadMe.md"
description = "This lib allows you to retrieve a ReadMe of a GitHub repo in the form of text that can be shown in console."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["GitHubReadMeRender"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
requirements = [
	"miniGHAPI", # @ git+https://codeberg.org/KOLANICH-libs/miniGHAPI.py
	"LMRender", # @ git+https://codeberg.org/KOLANICH-libs/LMRender.py
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/GitHubReadMeRender.py"

[project.scripts]
GitHubReadMeRender = "GitHubReadMeRender.__main__:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["GitHubReadMeRender", "GitHubReadMeRender.*"]

[tool.setuptools_scm]
